--- a/css/butterfly.css
+++ b/css/butterfly.css
@@ -1,4 +1,23 @@
- 
+@media (max-width: 480px) {
+    .stage {
+     left: 5% !important;
+
+}}
+@media (min-width: 481px) and (max-width: 768px) {
+    .stage {
+     left: 10% !important;
+
+}}
+@media (min-width: 769px) and (max-width: 1024px) {
+    .stage {
+     left: 25% !important;
+
+}}
+@media (min-width: 1025px) and (max-width: 1440px) {
+    .stage {
+     left: 30% !important;
+
+}} 
 /*/
 / animation stage*/
  .stage {
