--- a/css/butterfly.css
+++ b/css/butterfly.css
@@ -29,7 +29,7 @@
      height: 100vh;
      width: 100%;
      max-width: 100px;
-     overflow-y: hidden;
+     overflow: hidden;
      z-index: 2;
 }
 /*/
